new generic URL download plugin