@@ -1,5 +1,7 @@
 package com.github.three_old_coders.blueprint.common;
 
+import lombok.SneakyThrows;
+
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
@@ -9,8 +11,8 @@ public class URLUtils
     {
     }
 
-    public static String encode(final String s)
+    @SneakyThrows public static String encode(final String s)
     {
-        return URLEncoder.encode(s, StandardCharsets.UTF_8);
+        return URLEncoder.encode(s, StandardCharsets.UTF_8.name());
     }
 }
